<resources>
    <string name="app_name">VRE_App</string>
    <string name="register">register</string>
    <string name="todo">todo</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_a_account">Create A Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="username">Username</string>
    <string name="textpassword">Password</string>
    <string name="logout">LogOut</string>
    <string name="app_logo_name">VRE</string>
    <string name="app_title_name">Voice Recognition Emergency</string>
    <string name="username_text">Email or Username</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="create_account">Create an Account</string>
    <string name="customKeyWords">Custom Key Words</string>
    <string name="speechRecognition">Speech Recognition</string>
    <string name="customTextMessageContent">Custom Text Message Content</string>
    <string name="customizableConfigurations">Customizable Configurations</string>
    <string name="contactList">Contact List</string>
    <string name="profile">Profile</string>
    <string name="vreServiceActivation">VRE Service Activation</string>
    <string name="gpsTrackingActivation">GPS Tracking Activation</string>
    <string name="coming_soon_text">Coming Soon</string>
    <string name="onSpeech">Turn On</string>
    <string name="offSpeech">Turn Off</string>
    <string name="verify_email_username_text">Email or Username</string>
    <string name="verify_email_username_button">Verify</string>
    <string name="forgot_password_info">Enter your Email or Username. A text with a verification code will be sent to you.</string>
    <string name="verify_account_text">Verify your account</string>
    <string name="title_activity_verification_code">VerificationCode</string>

    <string name="verification_code_text">Enter verification code</string>
    <string name="verification_code_info">Verification code was sent to your email</string>
    <string name="enter_code_text">Enter code</string>
    <string name="verify_code_button">Verify</string>
    <string name="set_new_password_text">Set new password</string>
    <string name="set_new_password_info">Enter your new password and confirm new password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password_text">Confirm new password</string>
    <string name="continue_button">Continue</string>
    <string name="emergencyMessageSetup">Emergency Message Setup</string>
    <string name="emergencyMessages">Emergency Messages</string>
    <string name="contacts">Contacts</string>
    <string name="display_email_username">Email/Username display</string>
    <string name="noKeyPhrase">No keyPhrases set</string>
    <string name="error_info_display"> </string>
    <string name="error_code_display">" "</string>
    <string name="error_account_display">" "</string>
    <string name="error_new_password_display">" "</string>
    <string name="forgot_email_username_text">Forgot Email/Username</string>
    <string name="select_contacts">"Select Contact(s)"</string>
    <string name="forgot_email_username_info">Enter your Email or Username that you used to register. A text with a verification code will be sent to you.</string>
    <string name="find_account_text">Find Account</string>
    <string name="code_login_text">Account Found</string>
    <string name="code_login_info_text">Login to your account with verification code and your password</string>
    <string name="verification_code">Verification code</string>
    <string name="search_email_username_button">Search</string>
    <string name="error_code_login_display">" "</string>
    <string name="emsPingingLocation">EMS Pinging Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile_info">Profile Information</string>
    <string name="display_full_name">Display Full Name</string>
    <string name="display_username">Display Username</string>
    <string name="display_email">Display Email</string>
    <string name="display_phone">Display Phone Number</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="update_profile_button">Update</string>
    <string name="edit_profile_back_button">Back to Menu</string>
    <string name="cancel_button">Cancel</string>


</resources>