<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF185CA5"
    tools:context=".view.SetNewPasswordActivity">

    <TextView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/blinker_bold"
        android:text="@string/app_logo_name"
        android:textColor="@color/white"
        android:textSize="90sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_front_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/set_password_email_username_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_email_username"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_front_title"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/set_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/set_new_password_text"
        android:textColor="#FFFF00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_password_email_username_display" />

    <TextView
        android:id="@+id/set_new_password_info"
        android:layout_width="277dp"
        android:layout_height="44dp"
        android:text="@string/set_new_password_info"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/set_new_password" />

    <TextView
        android:id="@+id/invalid_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_new_password_display"
        android:textColor="#FA8072"
        android:textSize="16sp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@id/new_password_text"
        app:layout_constraintLeft_toLeftOf="@id/new_password"
        app:layout_constraintRight_toRightOf="@id/new_password" />

    <TextView
        android:id="@+id/new_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:labelFor="@+id/new_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/new_password" />

    <EditText
        android:id="@id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="textPassword|textNoSuggestions"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_text" />

    <TextView
        android:id="@+id/confirm_new_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password_text"
        android:labelFor="@+id/confirm_new_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/confirm_new_password"
        app:layout_constraintTop_toBottomOf="@id/new_password" />

    <EditText
        android:id="@id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="textPassword|textNoSuggestions"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/confirm_new_password_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/new_password_cont_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_style"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_new_password" />

    <ImageView
        android:id="@+id/maverick_image"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/mavricks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>