<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF185CA5"
    tools:context=".view.ForgotEmailUsernameActivity">

    <TextView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/blinker_bold"
        android:text="@string/app_logo_name"
        android:textColor="@color/white"
        android:textSize="90sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_front_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />


    <TextView
        android:id="@+id/forgot_email_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_email_username_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_front_title" />

    <TextView
        android:id="@+id/verify_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_account_text"
        android:textColor="#FFFF00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_email_username" />

    <TextView
        android:id="@+id/forgot_email_username_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_email_username_info"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_account"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/invalid_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/error_account_display"
        android:textColor="#FA8072"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintLeft_toLeftOf="@id/verify_email_username"
        app:layout_constraintRight_toRightOf="@id/verify_email_username"
        app:layout_constraintTop_toBottomOf="@id/forgot_email_username_text" />

    <TextView
        android:id="@+id/verify_email_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_email_username_text"
        android:labelFor="@+id/verify_email_username"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invalid_username"
        app:layout_constraintLeft_toLeftOf="@id/verify_email_username" />

    <EditText
        android:id="@+id/verify_email_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/white"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/verify_email_username_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/verify_email_username_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_style"
        android:text="@string/verify_email_username_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_email_username" />

    <ImageView
        android:id="@+id/maverick_image"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/mavricks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>